# encrypt-decrypt-file

./: CMakeLists.txt  README.md
include/: Base64Encryption.h  FileEncryptor.h
src/: Base64Encryption.cpp  FileEncryptor.cpp  main.cpp
tests/: test_Base64Encryption.cpp  test_FileEncryptor.cpp
